--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "synchronize": "^2.0.0"
   }
 }
