--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
-    "morgan": "~1.7.0",
+    "jsonwebtoken": "^7.1.9",
+    "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "serve-favicon": "~2.3.0",
     "synchronize": "^2.0.0"
